# eel-817-redes-neurais

./: activations.csv  activations30.csv  card_clone.sh  combined_data.csv  data_extract.py  main.py  pyproject.toml  summarized.csv
NN/: main.py
NN/data/: petr_data.csv
