[tool.poetry]
name = "eel-817-redes-neurais"
version = "0.1.0"
description = ""
authors = ["Lucas Ikuhara <lri2911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = {extras = ["and-cuda"], version = "^2.17.0"}
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
